# OpenCLBA

./: .~lock.Bachelor Thesis.odp#  Bachelor Thesis.odp  CMakeLists.txt  Log  Notes  Speak  calKernel.cl  command  hello.cl  kernel-Log  kernel-original.cl  kernel-original25-3.cl  kernel.cl  main.cpp  main.cpp.autosave  misc.h  oct_processing.h  regression.h  util.h
Images neu/: All four Iteration  All four Iteration TITANX.html  each Step
Latex/: Thesis.aux  Thesis.dvi  Thesis.out  Thesis.tex  Thesis.toc
OpenCL-Latex/: Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.dvi  Thesis.out  Thesis.tex  Thesis.toc  references.bib
OpenCL-Latex/components/: Introduction.tex  abstract.tex  acknowledgements.tex  cover.tex  disclaimer.tex  opencl.tex  result.tex  shifting.tex  source.tex  titlepage.tex
OpenCL-Latex/images/: All four Iteration  All four iteration.html
